# midipy

./: CODE_CONDUCT.md  LICENSE  README.md  config.py  main.py  midi.py  pyproject.toml  requirements.txt  schema.py
docs/: TECHNICAL.md
mix/: README.md  __init__.py  cc.py  dsp_module.py  effects.py  master.py  pipeline.py  routing.py  spatial.py  track_render.py
synth/: README.md  __init__.py  additive.py  calibrate.py  drums.py  dsp.py  envelope.py  fm.py  gm.py  inharmonic.py  instruments.py  ks.py  supersaw.py  timbre.py  voice.py
test/: README.md  gen_all.py  test_audio_quality.py  test_pipeline.py  test_regression.py  test_voice.py
