[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "midi2flac"
version = "1.58.0"
description = "Offline MIDI-to-FLAC synthesizer — pure math, no samples"
requires-python = ">=3.9"
dependencies = [
    "mido>=1.3",
    "soundfile>=0.12",
    "scipy>=1.10",
    "numpy>=1.24",
]

[project.scripts]
midi2flac = "main:main"

[tool.setuptools]
py-modules = ["main", "midi", "schema", "config"]
packages = ["synth", "mix"]
